# nitro-app-updater

./: .eslintrc.js  .gitignore  AppUpdater.podspec  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  UPGRADE.md  app.plugin.js  jest-setup.ts  jest.config.js  nitro.json  package-lock.json  package.json  react-native.config.js  tsconfig.json
.agent/skills/nitrogen-module-development/: SKILL.md
.agent/workflows/: build-and-package.md  publish-to-npm.md
.github/workflows/: native-build.yml  nitrogen-check.yml
__tests__/: AppUpdaterContext.test.tsx  AppUpdaterError.test.ts  HappinessGate.test.tsx  NativeAppUpdater.test.ts  UpdatePrompt.test.tsx  openStoreReviewPage.test.ts  smartReview.test.ts  stability.test.ts  useAppUpdater.test.ts  useDownloadManager.test.ts  useSmartReviewManager.test.ts  useUpdateManager.test.ts  versionCheck.test.ts
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/minhnc/appupdater/: HybridAppUpdater.kt
android/src/main/java/com/minhnc/appupdater/: AppUpdaterPackage.kt
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
ios/: HybridAppUpdater.swift
src/: AppUpdater.nitro.ts  AppUpdaterContext.tsx  AppUpdaterError.ts  HappinessGate.tsx  NativeAppUpdater.ts  UpdatePrompt.tsx  expo-plugin.ts  index.ts  types.ts  useAppUpdater.ts  useDownloadManager.ts  useSmartReviewManager.ts  useUpdateManager.ts  versionCheck.ts
